Data added and fix the alignments

--- a/src/index.css
+++ b/src/index.css
@@ -26,14 +26,13 @@ body{
   width: 20%;
 }
 
-@media screen and (min-width:768px) {
+@media screen and (min-width:786px) {
     .pokelist{
         grid-template-columns: repeat(3, 1fr);
     }
 }
 
 .pokemon img{
-  
   border-radius:20px ;
   width: 100%;
   object-fit: cover;
@@ -41,14 +40,16 @@ body{
  }
 
  .pokemon{
-
     border-radius:10px ;
     background-image: linear-gradient(to right,rgb(91, 233, 221),rgb(247, 101, 101) );
     background-image: url(https://e1.pxfuel.com/desktop-wallpaper/1024/13/desktop-wallpaper-neon-yellow-blue-green.jpg);
-    border-radius: 1 rem;
+    border-radius: 2rem;
     padding: 2rem;
     text-align: center;
     position: relative;
+  }
+  .pokemon img{
+    max-height: 110%;
   }
 
 .pokemon button{
@@ -56,27 +57,51 @@ body{
   cursor: pointer;
   background-color: transparent;
   border-radius: 10px;
+  background-image: linear-gradient(to left,rgb(208, 255, 0),rgb(0, 242, 255));
 }
 
 .number{
   position: absolute;
   top:0;
   left:0;
-  padding: 0.75rem;
+  padding: 0.65rem;
   font-size: 1rem;
   border-radius: 1rem 0 1rem 0; 
-  background-image: linear-gradient(to right,rgb(208, 255, 0),rgb(0, 242, 255))
-  
+  background-image: linear-gradient(to right,rgb(208, 255, 0),rgb(0, 242, 255));
+  border: 2px solid black;
 }
 
 h1{
-  text-align: center;
+  position: relative;
+  text-align: center; 
+  width: 50%;
+  margin: auto;
   border-radius: 1rem;
-  width: auto;
-  left: 50%;
   font-family:cursive;
   background-image: linear-gradient(to right,rgb(0, 255, 179),rgb(200, 255, 0));
   margin-top:1rem;
   text-transform: capitalize;
-  font-size: 4rem;
+  font-size: 3rem;
+  border: 4px solid black;
+}
+.name{
+  background-image: linear-gradient(to right,rgb(208, 255, 0),rgb(0, 242, 255));
+  border: 2px solid black;
+  border-radius: 10px;
+}
+
+
+.pokemon h3{
+  font-size: 1rem;
+}
+
+.logodiv{ 
+  width:auto;
+  text-align:center;
+  padding:5px;
+}
+.logo{
+  height:20%;
+  width:20%;
+  object-fit: fill;
 }
